# Metro-Game-Engine

./: .gitignore  CMakeLists.txt  GameRules.txt  Met_Game.sln
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Met_Game/: CMakeLists.txt  Met_Game.vcxproj  main.cpp
Metro/: CMakeLists.txt  Metro.vcxproj  Metro.vcxproj.filters  cpp.hint
Metro/include/: Metro.h
Metro/src/: GameWindow.cpp  GameWindow.h  Image.cpp  Image.h  ImplImage.h  ImplRenderer.h  ImplShader.h  MetroApp.cpp  MetroApp.h  MetroEvents.cpp  MetroEvents.h  MetroKeys.h  MetroUtil.h  Renderer.cpp  Renderer.h  RendererTypes.h  Shader.cpp  Shader.h  Unit.cpp  Unit.h  WindowImplementation.h
Metro/src/GLFWCode/: GLFWimplementation.cpp  GLFWimplementation.h
Metro/src/OpenGLCode/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
